--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">NewsApp</string>
 
-    <string name="action_refresh">Refresh</string>
+    <string name="action_search">Search</string>
 </resources>
